tests/paczka1/fuzzy1/21383745.err
Error in line 2: kPxxh7J S228 71,3
Error in line 16: Aon A355 84,8
Error in line 19: 9d4d0Mcn S228 57,1
Error in line 24: 9d4d0Mcn A355 87,3
